[package]
name = "shadowlend-contracts"
version = "0.1.0"
description = "ShadowLend Solana Smart Contracts - Privacy-preserving lending protocol with Arcium MXE integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shadowlend_contracts"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "1.0.1", features = ["rand"] }
sha2 = "0.10.8"
aes-gcm = "0.10.3"
rand = "0.8.5"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }